# imageocv

./: README.md
cpp/: CMakeLists.txt
cpp/include/imageocv/: findlane.hpp  imageio.hpp
cpp/src/: findlane.cpp  imageio.cpp
cpp/test/: CMakeLists.txt  main.cpp
python/: dicom.py  lungsegmentation.py
